Terminal Saved Output.txt
Last login: Sat Jun 14 05:17:46 on ttys022
emon@Emons-MacBook-Air hero-pro-assignment-11(backEnd) % nodemon index.js
[nodemon] 3.1.10
[nodemon] to restart at any time, enter `rs`
[nodemon] watching path(s): *.*
[nodemon] watching extensions: js,mjs,cjs,json
[nodemon] starting `node index.js`
port 3000 is running
Pinged your deployment. You successfully connected to MongoDB!
[nodemon] restarting due to changes...
[nodemon] starting `node index.js`
/Users/emon/WEB DEVLOPMENT /Assignments/hero-pro-assignment-11/hero-pro-assignment-11(backEnd)/index.js:76
guvkhlbjkn;/
           ^

SyntaxError: Invalid regular expression: missing /
    at wrapSafe (node:internal/modules/cjs/loader:1515:18)
    at Module._compile (node:internal/modules/cjs/loader:1537:20)
    at Object..js (node:internal/modules/cjs/loader:1708:10)
    at Module.load (node:internal/modules/cjs/loader:1318:32)
    at Function._load (node:internal/modules/cjs/loader:1128:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:219:24)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:170:5)
    at node:internal/main/run_main_module:36:49

Node.js v22.12.0
[nodemon] app crashed - waiting for file changes before starting...
[nodemon] restarting due to changes...
[nodemon] starting `node index.js`
port 3000 is running
Pinged your deployment. You successfully connected to MongoDB!

